--- a/environment-min.yml
+++ b/environment-min.yml
@@ -4,6 +4,8 @@ channels:
   - defaults
 dependencies:
   - sqlalchemy=1.4.46
+  - pillow=10.0.1
+  - werkzeug=2.3.7
   - flask
   - urllib3
   - pendulum
