--- a/environment.yml
+++ b/environment.yml
@@ -5,202 +5,163 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.8
-  - anyio=3.7.1
-  - attr=2.5.1
+  - anyio=4.0.0
   - blinker=1.6.2
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotli-python=1.0.9
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - brotli-python=1.1.0
   - bzip2=1.0.8
   - ca-certificates=2023.7.22
-  - cairo=1.16.0
   - certifi=2023.7.22
-  - cffi=1.15.1
-  - charset-normalizer=3.2.0
+  - cffi=1.16.0
+  - charset-normalizer=3.3.0
   - click=8.1.7
   - colorama=0.4.6
-  - contourpy=1.1.0
-  - cryptography=41.0.3
-  - cycler=0.11.0
+  - contourpy=1.1.1
+  - cryptography=41.0.4
+  - cycler=0.12.1
   - daiquiri=3.0.0
-  - dbus=1.13.6
+  - dbus=1.13.18
   - dnspython=2.4.2
   - dominate=2.8.0
   - email-validator=2.0.0.post2
   - email_validator=2.0.0.post2
   - exceptiongroup=1.1.3
   - expat=2.5.0
-  - flask=2.3.2
+  - flask=2.3.3
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.2
   - flask-wtf=1.1.1
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
   - fontconfig=2.14.2
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - fonttools=4.42.1
+  - fonttools=4.43.1
   - freetype=2.12.1
   - gettext=0.21.1
-  - glib=2.76.4
-  - glib-tools=2.76.4
-  - graphite2=1.3.13
-  - greenlet=2.0.2
-  - gst-plugins-base=1.22.0
-  - gstreamer=1.22.0
+  - giflib=5.2.1
+  - glib=2.78.0
+  - glib-tools=2.78.0
+  - greenlet=3.0.0
+  - gst-plugins-base=1.14.1
+  - gstreamer=1.14.1
   - h11=0.14.0
   - h2=4.1.0
-  - harfbuzz=6.0.0
   - hpack=4.0.0
-  - httpcore=0.17.3
+  - httpcore=1.0.0
   - hyperframe=6.0.1
-  - icu=72.1
+  - icu=58.2
   - idna=3.4
   - importlib-metadata=6.8.0
   - iniconfig=2.0.0
   - itsdangerous=2.1.2
   - jansson=2.14
   - jinja2=3.1.2
+  - jpeg=9e
   - keyutils=1.6.1
-  - kiwisolver=1.4.4
+  - kiwisolver=1.4.5
   - krb5=1.20.1
-  - lame=3.100
   - lcms2=2.15
   - ld_impl_linux-64=2.40
   - ldap3=2.9.1
   - lerc=4.0.0
   - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcap=2.69
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
   - libcblas=3.9.0
-  - libclang=16.0.2
-  - libclang13=16.0.2
+  - libclang=14.0.6
+  - libclang13=14.0.6
   - libcups=2.3.3
-  - libdeflate=1.18
+  - libdeflate=1.17
   - libedit=3.1.20191231
-  - libevent=2.1.10
+  - libevent=2.1.12
   - libexpat=2.5.0
   - libffi=3.4.2
-  - libflac=1.4.3
-  - libgcc-ng=13.1.0
-  - libgcrypt=1.10.1
-  - libgfortran-ng=13.1.0
-  - libgfortran5=13.1.0
-  - libglib=2.76.4
-  - libgomp=13.1.0
-  - libgpg-error=1.47
+  - libgcc-ng=13.2.0
+  - libgfortran-ng=13.2.0
+  - libgfortran5=13.2.0
+  - libglib=2.78.0
+  - libgomp=13.2.0
   - libiconv=1.17
-  - libjpeg-turbo=2.1.5.1
   - liblapack=3.9.0
-  - libllvm16=16.0.3
+  - libllvm14=14.0.6
   - libnsl=2.0.0
-  - libogg=1.3.4
-  - libopenblas=0.3.23
-  - libopus=1.3.1
+  - libopenblas=0.3.24
   - libpng=1.6.39
-  - libpq=15.2
-  - libsndfile=1.2.2
+  - libpq=12.15
   - libsodium=1.0.18
-  - libsqlite=3.42.0
-  - libstdcxx-ng=13.1.0
-  - libsystemd0=254
-  - libtiff=4.5.1
+  - libsqlite=3.43.0
+  - libstdcxx-ng=13.2.0
+  - libtiff=4.5.0
   - libuuid=2.38.1
-  - libvorbis=1.3.7
-  - libwebp-base=1.3.1
-  - libxcb=1.13
-  - libxkbcommon=1.5.0
+  - libwebp=1.3.2
+  - libwebp-base=1.3.2
+  - libxcb=1.16
+  - libxkbcommon=1.0.3
   - libxml2=2.10.4
   - libxslt=1.1.37
   - libzlib=1.2.13
   - lxml=4.9.2
-  - lz4-c=1.9.4
   - markupsafe=2.1.3
-  - matplotlib=3.7.2
-  - matplotlib-base=3.7.2
-  - mpg123=1.31.3
+  - matplotlib=3.8.0
+  - matplotlib-base=3.8.0
   - munkres=1.1.4
-  - mysql-common=8.0.33
-  - mysql-libs=8.0.33
+  - mysql=5.7.20
   - ncurses=6.4
   - nspr=4.35
-  - nss=3.92
-  - numpy=1.25.2
+  - nss=3.94
+  - numpy=1.26.0
   - openjpeg=2.5.0
-  - openssl=3.1.2
-  - packaging=23.1
+  - openssl=3.1.3
+  - packaging=23.2
   - pcre=8.45
   - pcre2=10.40
   - pendulum=2.1.2
-  - pillow=9.5.0
+  - pillow=10.0.1
   - pip=23.2.1
-  - pixman=0.40.0
-  - pluggy=1.2.0
+  - pluggy=1.3.0
   - ply=3.11
   - psycopg2=2.9.3
   - pthread-stubs=0.4
-  - pulseaudio-client=16.1
-  - pyasn1=0.4.8
+  - pyasn1=0.5.0
   - pycparser=2.21
   - pynacl=1.5.0
-  - pyparsing=3.0.9
-  - pyqt=5.15.9
-  - pyqt5-sip=12.12.2
+  - pyparsing=3.1.1
+  - pyqt=5.15.7
+  - pyqt5-sip=12.11.0
   - pysocks=1.7.1
-  - pytest=7.4.0
-  - python=3.11.4
+  - pytest=7.4.2
+  - python=3.11.6
   - python-dateutil=2.8.2
   - python-json-logger=2.0.7
   - python_abi=3.11
   - pytzdata=2020.1
-  - qt-main=5.15.8
+  - qt-main=5.15.2
+  - qt-webengine=5.15.9
+  - qtwebkit=5.212
   - readline=8.2
   - requests=2.31.0
-  - setuptools=68.1.2
-  - sip=6.7.11
+  - setuptools=68.2.2
+  - sip=6.6.2
   - six=1.16.0
   - sniffio=1.3.0
   - sqlalchemy=1.4.46
-  - tk=8.6.12
+  - sqlite=3.43.0
+  - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
   - tornado=6.3.3
-  - typing_extensions=4.7.1
+  - typing_extensions=4.8.0
   - tzdata=2023c
-  - urllib3=2.0.4
+  - urllib3=2.0.6
   - uwsgi=2.0.21
   - visitor=0.1.3
   - werkzeug=2.3.7
-  - wheel=0.41.1
+  - wheel=0.41.2
   - wtforms=3.0.1
-  - xcb-util=0.4.0
-  - xcb-util-image=0.4.0
-  - xcb-util-keysyms=0.4.0
-  - xcb-util-renderutil=0.3.9
-  - xcb-util-wm=0.4.1
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.1.1
-  - xorg-libsm=1.2.4
-  - xorg-libx11=1.8.4
   - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxrender=0.9.10
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xf86vidmodeproto=2.3.1
-  - xorg-xproto=7.0.31
-  - xz=5.2.6
+  - xz=5.4.2
   - yaml=0.2.5
-  - zipp=3.16.2
+  - zipp=3.17.0
   - zlib=1.2.13
-  - zstd=1.5.2
-  - pip:
-      - pastaplus-soh==2023.2.22
-      - sniffer==2020.8.4
+  - zstd=1.5.5
 prefix: /home/servilla/miniconda3/envs/dashboard
