--- a/environment.yml
+++ b/environment.yml
@@ -6,17 +6,18 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.14
+  - backports.zstd=1.2.0
   - blinker=1.9.0
   - brotli=1.2.0
   - brotli-bin=1.2.0
   - brotli-python=1.2.0
   - bzip2=1.0.8
-  - ca-certificates=2025.10.5
+  - ca-certificates=2025.11.12
   - cairo=1.18.4
-  - certifi=2025.10.5
+  - certifi=2025.11.12
   - cffi=2.0.0
   - charset-normalizer=3.4.4
-  - click=8.3.0
+  - click=8.3.1
   - colorama=0.4.6
   - contourpy=1.3.3
   - cryptography=46.0.3
@@ -29,7 +30,7 @@ dependencies:
   - double-conversion=3.3.1
   - email-validator=2.3.0
   - email_validator=2.3.0
-  - exceptiongroup=1.3.0
+  - exceptiongroup=1.3.1
   - flask=3.1.2
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.3
@@ -41,12 +42,12 @@ dependencies:
   - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.60.1
+  - fonttools=4.61.0
   - freetype=2.14.1
   - graphite2=1.3.14
-  - greenlet=3.2.4
+  - greenlet=3.3.0
   - h2=4.3.0
-  - harfbuzz=12.1.0
+  - harfbuzz=12.2.0
   - hpack=4.1.0
   - hyperframe=6.1.0
   - icu=75.1
@@ -60,22 +61,22 @@ dependencies:
   - kiwisolver=1.4.9
   - krb5=1.21.3
   - lcms2=2.17
-  - ld_impl_linux-64=2.44
+  - ld_impl_linux-64=2.45
   - ldap3=2.9.1
   - lerc=4.0.0
-  - libblas=3.9.0
+  - libblas=3.11.0
   - libbrotlicommon=1.2.0
   - libbrotlidec=1.2.0
   - libbrotlienc=1.2.0
-  - libcblas=3.9.0
-  - libclang-cpp21.1=21.1.4
-  - libclang13=21.1.4
+  - libcblas=3.11.0
+  - libclang-cpp21.1=21.1.7
+  - libclang13=21.1.7
   - libcups=2.3.3
   - libdeflate=1.25
   - libdrm=2.4.125
   - libedit=3.1.20250104
   - libegl=1.7.0
-  - libexpat=2.7.1
+  - libexpat=2.7.3
   - libffi=3.5.2
   - libfreetype=2.14.1
   - libfreetype6=2.14.1
@@ -84,24 +85,24 @@ dependencies:
   - libgfortran=15.2.0
   - libgfortran5=15.2.0
   - libgl=1.7.0
-  - libglib=2.86.1
+  - libglib=2.86.2
   - libglvnd=1.7.0
   - libglx=1.7.0
   - libgomp=15.2.0
   - libiconv=1.18
   - libjpeg-turbo=3.1.2
-  - liblapack=3.9.0
-  - libllvm21=21.1.4
+  - liblapack=3.11.0
+  - libllvm21=21.1.7
   - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
   - libopenblas=0.3.30
   - libopengl=1.7.0
   - libpciaccess=0.18
-  - libpng=1.6.50
-  - libpq=18.0
+  - libpng=1.6.53
+  - libpq=18.1
   - libsodium=1.0.20
-  - libsqlite=3.50.4
+  - libsqlite=3.51.1
   - libstdcxx=15.2.0
   - libstdcxx-ng=15.2.0
   - libtiff=4.7.1
@@ -110,26 +111,26 @@ dependencies:
   - libwebp-base=1.6.0
   - libxcb=1.17.0
   - libxcrypt=4.4.36
-  - libxkbcommon=1.12.3
+  - libxkbcommon=1.13.1
   - libxml2=2.15.1
   - libxml2-16=2.15.1
   - libxslt=1.1.43
   - libzlib=1.3.1
   - lxml=6.0.2
   - markupsafe=3.0.3
-  - matplotlib=3.10.7
-  - matplotlib-base=3.10.7
+  - matplotlib=3.10.8
+  - matplotlib-base=3.10.8
   - munkres=1.1.4
   - ncurses=6.5
-  - numpy=2.3.4
+  - numpy=2.3.5
   - openjpeg=2.5.4
   - openldap=2.6.10
-  - openssl=3.5.4
+  - openssl=3.6.0
   - packaging=25.0
   - pcre2=10.46
   - pendulum=3.1.0
   - pillow=12.0.0
-  - pip=25.2
+  - pip=25.3
   - pixman=0.46.4
   - pluggy=1.6.0
   - psycopg2=2.9.10
@@ -137,11 +138,11 @@ dependencies:
   - pyasn1=0.6.1
   - pycparser=2.22
   - pygments=2.19.2
-  - pynacl=1.6.0
+  - pynacl=1.6.1
   - pyparsing=3.2.5
   - pyside6=6.9.3
   - pysocks=1.7.1
-  - pytest=8.4.2
+  - pytest=9.0.2
   - python=3.11.14
   - python-dateutil=2.9.0.post0
   - python-json-logger=2.0.7
@@ -154,22 +155,22 @@ dependencies:
   - six=1.17.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
-  - time-machine=2.19.0
+  - time-machine=3.1.0
   - tk=8.6.13
   - tomli=2.3.0
   - tornado=6.5.2
   - typing_extensions=4.15.0
   - tzdata=2025b
-  - unicodedata2=16.0.0
-  - urllib3=2.5.0
+  - unicodedata2=17.0.0
+  - urllib3=2.6.0
   - uwsgi=2.0.31
   - visitor=0.1.3
   - wayland=1.24.0
-  - werkzeug=3.1.3
+  - werkzeug=3.1.4
   - wheel=0.45.1
   - wtforms=3.2.1
   - xcb-util=0.4.1
-  - xcb-util-cursor=0.1.5
+  - xcb-util-cursor=0.1.6
   - xcb-util-image=0.4.0
   - xcb-util-keysyms=0.4.1
   - xcb-util-renderutil=0.3.10
@@ -192,7 +193,6 @@ dependencies:
   - xorg-libxxf86vm=1.1.6
   - yaml=0.2.5
   - zipp=3.23.0
-  - zlib-ng=2.2.5
-  - zstandard=0.25.0
+  - zlib-ng=2.3.2
   - zstd=1.5.7
 prefix: /home/servilla/miniconda3/envs/dashboard
