--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+backports.zstd==1.2.0
 blinker==1.9.0
 Brotli==1.2.0
-certifi==2025.10.5
+certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.0
+click==8.3.1
 colorama==0.4.6
 contourpy==1.3.3
 cryptography==46.0.3
@@ -12,13 +13,13 @@ daiquiri==3.0.0
 dnspython==2.8.0
 dominate==2.9.1
 email-validator==2.3.0
-exceptiongroup==1.3.0
+exceptiongroup==1.3.1
 Flask==3.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.2
-fonttools==4.60.1
-greenlet==3.2.4
+fonttools==4.61.0
+greenlet==3.3.0
 h2==4.3.0
 hpack==4.1.0
 hyperframe==6.1.0
@@ -31,23 +32,23 @@ kiwisolver==1.4.9
 ldap3==2.9.1
 lxml==6.0.2
 MarkupSafe==3.0.3
-matplotlib==3.10.7
+matplotlib==3.10.8
 munkres==1.1.4
-numpy==2.3.4
+numpy==2.3.5
 packaging==25.0
 pendulum==3.1.0
 pillow==12.0.0
-pip==25.2
+pip==25.3
 pluggy==1.6.0
 psycopg2==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 Pygments==2.19.2
-PyNaCl==1.6.0
+PyNaCl==1.6.1
 pyparsing==3.2.5
 PySide6==6.9.3
 PySocks==1.7.1
-pytest==8.4.2
+pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 requests==2.32.5
@@ -56,16 +57,15 @@ shiboken6==6.9.3
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==1.4.46
-time-machine==2.19.0
+time-machine==3.1.0
 tomli==2.3.0
 tornado==6.5.2
 typing_extensions==4.15.0
-unicodedata2==16.0.0
-urllib3==2.5.0
+unicodedata2==17.0.0
+urllib3==2.6.0
 uWSGI==2.0.31
 visitor==0.1.3
-Werkzeug==3.1.3
+Werkzeug==3.1.4
 wheel==0.45.1
 WTForms==3.2.1
 zipp==3.23.0
-zstandard==0.25.0
